# FlappyBirdAI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: bird.hpp  brain.hpp  configuration.hpp  generation.hpp  utils.hpp  wall.hpp
