cmake_minimum_required(VERSION 3.23)
project(FlappyBirdAI)

set(CMAKE_CXX_STANDARD 23)

add_executable(FlappyBirdAI main.cpp)

set(LIBRAPID_OPTIMISE_SMALL_ARRAYS ON)
set(LIBRAPID_USE_BLAS ON)
set(LIBRAPID_USE_OPENCL ON)
set(LIBRAPID_USE_CUDA ON)
set(LIBRAPID_USE_OMP ON)
set(LIBRAPID_FAST_MATH ON)
set(LIBRAPID_OPTIMISE_SMALL_ARRAYS ON)
set(LIBRAPID_CUDA_FLOAT_VECTOR_WIDTH 4)
set(LIBRAPID_CUDA_DOUBLE_VECTOR_WIDTH 4)
set(LIBRAPID_GET_FFTW ON)
set(LIBRAPID_GET_BLAS ON)

add_subdirectory(Surge)
target_link_libraries(FlappyBirdAI PUBLIC surge)
